# dialog-engine

./: .gitignore  LICENSE  PUBLISHING.md  README.md  pyproject.toml
src/dialog_engine/: __init__.py  __main__.py  cli.py  engine.py  json_schema.py  loaders.py  mermaid.py  pydantic_schema.py  state.py  step.py  validation.py  visibility.py
src/dialog_engine/integrations/: __init__.py
src/dialog_engine/integrations/aiogram/: __init__.py  keyboards.py
tests/: test_engine.py
